# regular

./: LICENSE  Makefile  README.md  pyproject.toml  regular.db  regular_json.py  regular_sql.py  setup.cfg
regular_code/: regular.db  regular_data.json  regular_json.py  regular_sql.py  regular_sql2.py
